# agripolis-drl-par

./: AUTHORS.md  LICENSE  README.md  train.sh
doc/: AgriPoliS2020-1.htm  AgriPoliS2020-10.mht  AgriPoliS2020-11.mht  AgriPoliS2020-12.mht  AgriPoliS2020-2.htm  AgriPoliS2020-5.htm  AgriPoliS2020-6.mht  AgriPoliS2020-7.mht  AgriPoliS2020-8.mht  AgriPoliS2020-9.mht  Matrix_syntax.txt  Policy_syntax.txt
inputfiles/: demographics.txt  farmsdata.txt  globals.txt  investments.txt  market.txt  options.txt  policy_settings.txt  scenario-temp.txt  scenario.txt
inputfiles-large/: demographics.txt  farmsdata.txt  globals.txt  investments.txt  market.txt  options.txt  policy_settings.txt  scenario-0.txt  scenario-temp.txt  scenario.txt
inputfiles-large/farms/: CROP-FIF1.txt  CROP-FIF2.txt  CROP-FIF3.txt  CROP-PIF4.txt  CROP-PIF5.txt  DAIRY-COR6.txt  DAIRY-COR8.txt  DAIRY-FIF7.txt  FODDER-PIF9.txt  GRAN-COR10.txt  GRAN-FIF11.txt  MIXED-COR12.txt  MIXED-COR13.txt  MIXED-COR14.txt  MIXED-COR15.txt  MIXED-FIF16.txt  MIXED-FIF18.txt  MIXED-PIF17.txt  MIXED-PIF19.txt
inputfiles-large/mip/: capacityLinks_alt.txt  matrix.txt  matrixLinks.txt  matrix_new_alt.txt  objFuncLinks.txt
inputfiles/mip/: capacityLinks.txt  matrixLinks.txt  matrix_new.txt
mlu/: ANET.py  Tenv.py  Tmain.py  config.py  env.py  main.py  model.py  train.py  util.py  utils.py
src/: AgriPoliS.h  CMakeLists.txt  RegGlobals.cpp  RegGlobals.h  RegLpD.cpp  RegRL.cpp  RegRL.h
src/agpCC/: agpCC.sln  agpCC.vcxproj  agpCC.vcxproj.filters
